# software-engineering

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.gpu  Jenkinsfile  README.md  compose.yml  main.py  pyproject.toml  requirements.txt  run_whisper_gpu.sh  settings.py
.github/workflows/: docker-ci.yml  flake8.yml  unit-tests.yml
api/handlers/: transcribe.py
api/spec/: transcribe.py
audio_info/: audio_file_info.py
connectors/: __init__.py  minio_connector.py  postgres.py
core/: __init__.py  whisper_transcriber.py
model/: whisper_transcriber.py
ports/: kafka.py
ports/api/handlers/: transcribe.py
ports/api/spec/: transcribe.py
ports/otel/: otel.py
src/adapters/api/handlers/: transcribe.py
src/adapters/db/: postgres.py
src/adapters/s3/: minio_connector.py
src/domain/whisper_model/: __init__.py  whisper_transcriber.py
src/services/audio_info/: audio_file_info.py
src/settings/: db_settings.py  s3_settings.py
tests/: conftest.py  test_handlers.py
