[tool.poetry]
name = "whisper-speech-recogniniton"
version = "1.1.0"
description = "This project is a transcription service built using FastAPI. It transcribes audio files using the WhisperTranscriber model."
authors = ["Vladimir Katin <katin.v.v@gmail.com>"]
license = "GNU GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai-whisper = "^20231117"
minio = "7.2.4"
fastapi = "0.109.1"
uvicorn = "0.27.1"
pydantic = "2.6.2"
python-dotenv = "1.0.1"
llvmlite = "^0.42.0"
numba = "^0.59.0"
torch = "2.2.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^8.0.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
